--- a/SimpleD3DRT/SimpleD3DRT.vcxproj.filters
+++ b/SimpleD3DRT/SimpleD3DRT.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="..\src\oshelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\win32helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\threadhelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\hdrhelper.h">
@@ -60,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\win32helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\threadhelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
