--- a/SimpleD3DRT/SimpleD3DRT.vcxproj.filters
+++ b/SimpleD3DRT/SimpleD3DRT.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\src\threadhelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\d3dhelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\hdrhelper.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\threadhelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\d3dhelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
